# data-agent

./: .gitignore  README.md  eval_cases.yaml  main.py  pyproject.toml
app/agent/: context.py  graph.py  llm.py  observability.py  sql_context.py  sql_security.py  sql_templates.py  state.py  streaming.py
app/agent/nodes/: add_extra_context.py  correct_sql.py  explain_result.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  run_sql.py  sql_failure.py  validate_sql.py
app/api/routers/: query_router.py
app/api/schemas/: query_schema.py
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: app_config.py  meta_config.py
app/core/: log.py
app/entities/: table_info.py  value_info.py
app/models/: column_info_mysql.py  column_metric_mysql.py  metric_info_mysql.py  table_info_mysql.py
app/prompt/: load_prompt.py
app/repositories/es/: value_es_repository.py
app/repositories/mysql/dw/: dw_mysql_repository.py
app/repositories/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: build_meta_knowledge.py  eval_agent.py
app/services/: meta_knowledge_service.py  query_service.py
conf/: app_config.yaml  meta_config.yaml
data-agent-fronted/: README.md
data-agent-fronted/src/: App.vue
docker/: docker-compose.yml
prompts/: correct_sql.prompt  explain_result.prompt  generate_sql.prompt
tests/: test_sql_security.py  test_sql_templates.py
(+4 files in other folders)
